# mysqlDB

./: Cargo.toml  caos.super  classes.super  main.super  modulo.super  setup_super.bat  txt  txt.txt
docs/: MANUAL.md
examples/: teste.super
math/: math.super
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  sintaxe.rs  token.rs
src/core/: mod.rs  symbol_table.rs  types.rs
src/ministers/: c_bridge.rs  java_bridge.rs  js_bridge.rs  mod.rs  python_bridge.rs
tests/: advanced_oop_test.super  advanced_polyglot.super  main.super  math.super
