[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
boa_engine = "0.19.1"
chumsky = "0.9.3"
colored = "3.1.1"
dashmap = "6.0.1"
jni = "0.21.1"
libloading = "0.8.5"
miette = { version = "7.2.0", features = ["fancy"] }
nom = "8.0.0"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
rustyline = "17.0.2"
serde = { version = "1.0.216", features = ["derive"] }
syn = "2.0.117"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
