[package]
name = "super_language"
version = "0.1.0"
edition = "2024"

[dependencies]
# Para transformar texto em tokens de forma rápida

# --- CORE & PARSING ---
#nom = "8.0.0"          # Para o Island Parsing (detectar os blocos de cada língua)
#syn = "2.0.117"          # Útil se você quiser que a sintaxe Omni lembre Rust
#serde = { version = "1.0.228", features = ["derive"] } # Para converter dados entre as línguas (Tesouro Real)

# --- OS MINISTROS (Runtimes) ---
#pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
#jni = { version = "0.22.4", features = ["invocation"] }         # Ministro Java
#boa_engine = "0.21.0"
# --- INFRAESTRUTURA ---
dashmap = "7.0.0-rc2"      # Para o "Tesouro Real" (HashMaps concorrentes de alta performance)
tracing = "0.1.44"      # Para a "Auditoria Real" (Logs de alta performance)
miette = "7.6.0"      # Para erros de compilação elegantes

# --- Para C / C++ ---
#libloading = "0.8.9"

# --- Para TypeScript / JS (O sucessor do V8 que tentamos antes) ---
#deno_core = "0.270"

# --- Para C# ---
#netcorehost = "0.20.0"

# Para criar a sintaxe Java-like
#chumsky = "0.9.3"

tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
colored = "3.1.1"
rustyline = "17.0.2"
tracing-subscriber = "0.3.23"


# Binário de Sintaxe (Parser/Compilador)
[[bin]]
name = "spl"
path = "src/main.rs"